# ratio

./: .editorconfig  CMakeLists.txt
.github/workflows/: main.yaml
lib/: CMakeLists.txt  ratio.cpp  ratio.h
test/: CMakeLists.txt  test.cpp
